hphp/hack/test/typecheck/classname/new_trait.php
<?hh

trait Foo {}

function f(class<Foo> $x): void {
  new $x();
}
